--- a/index.html
+++ b/index.html
@@ -28,7 +28,49 @@
     </style>
 </head>
 <body>
-    <h1>Timers</h1>
+    <h1>Pet Simulator 99 Timers</h1>
+
+    <h2>Potions</h2>
+    <table id="potionTable" class="custom-table">
+        <thead>
+            <tr>
+                <th>Image</th>
+                <th>Item</th>
+                <th>Type</th>
+                <th>Effect</th>
+                <th>Amount</th>
+                <th>Duration</th>
+                <th>Expiry</th>
+                <th>Countdown</th>
+                <th>Controls</th>
+            </tr>
+        </thead>
+        <tbody id="potionTableBody">
+            <!-- Rows will be populated by JavaScript -->
+        </tbody>
+    </table>
+
+    <h2>Empowering Enchants</h2>
+    <table id="empowerEnchantTable" class="custom-table">
+        <thead>
+            <tr>
+                <th>Image</th>
+                <th>Item</th>
+                <th>Type</th>
+                <th>Effect</th>
+                <th>Amount</th>
+                <th>Duration</th>
+                <th>Expiry</th>
+                <th>Countdown</th>
+                <th>Controls</th>
+            </tr>
+        </thead>
+        <tbody id="empowerEnchantTableBody">
+            <!-- Rows will be populated by JavaScript -->
+        </tbody>
+    </table>
+
+    <h2>Other</h2>
     <table id="timerTable" class="custom-table">
         <thead>
             <tr>
@@ -69,27 +111,6 @@
             <!-- Rows will be populated by JavaScript -->
         </tbody>
     </table>
-
-    <h2>Empowering Enchants</h2>
-    <table id="empowerEnchantTable" class="custom-table">
-        <thead>
-            <tr>
-                <th>Image</th>
-                <th>Item</th>
-                <th>Type</th>
-                <th>Effect</th>
-                <th>Amount</th>
-                <th>Duration</th>
-                <th>Expiry</th>
-                <th>Countdown</th>
-                <th>Controls</th>
-            </tr>
-        </thead>
-        <tbody id="empowerEnchantTableBody">
-            <!-- Rows will be populated by JavaScript -->
-        </tbody>
-    </table>
-    
 
     <script src="timer.js"></script>
     <script src="https://kit.fontawesome.com/a1b9122272.js" crossorigin="anonymous"></script>
