--- a/index.html
+++ b/index.html
@@ -30,6 +30,26 @@
 <body>
     <h1>Pet Simulator 99 Timers</h1>
 
+    <h2>Egg Luck</h2>
+    <table id="eggLuckTable" class="custom-table">
+        <thead>
+            <tr>
+                <th>Image</th>
+                <th>Item</th>
+                <th>Type</th>
+                <th>Effect</th>
+                <th>Amount</th>
+                <th>Duration</th>
+                <th>Expiry</th>
+                <th>Countdown</th>
+                <th>Controls</th>
+            </tr>
+        </thead>
+        <tbody id="eggLuckTableBody">
+            <!-- Rows will be populated by JavaScript -->
+        </tbody>
+    </table>
+
     <h2>Potions</h2>
     <table id="potionTable" class="custom-table">
         <thead>
